Add output parameter and remove db paramter

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ import java.time.LocalDateTime
 
 params {
     input = ""
-    db = ""
+    output = "./output"
     mamba = false
     workDir = "./nextflow_workdir"
 }
@@ -21,10 +21,10 @@ profiles {
         params.executor = 'local'
         process.executor = 'local'
         process.cpus = 1
-        process.memory = { 512.MB * task.attempt * Math.pow(2, task.attempt) }
+        process.memory = { 512.MB * task.attempt }
         process.maxForks = params.forks
         conda.enabled = true
-        process.conda = "$baseDir/envs/db-processing.yml"
+        process.conda = "$projectDir/envs/clustering.yml"
         if (params.mamba != false) {
             conda.useMamba = true
         }
@@ -41,13 +41,13 @@ profiles {
         process.executor = 'slurm'
         process.queue = params.queue
         process.cpus = 1
-        process.memory = { 512.MB * task.attempt * Math.pow(2, task.attempt) }
+        process.memory = { 512.MB * task.attempt }
         process.maxForks = params.forks - 1
         executor.queueSize = params.queueSize
         executor.pollInterval = params.pollInterval
         executor.submitRateLimit = params.submitRateLimit
         conda.enabled = true
-        process.conda = "$baseDir/envs/db-clustering.yml"
+        process.conda = "$projectDir/envs/clustering.yml"
         process.errorStrategy = { sleep(Math.pow(2, task.attempt) * 200 as long); return 'retry' }
         process.maxRetries = 1
         if (params.mamba != false) {
