Add array process directive

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ params {
     output = "./output"
     mamba = false
     workDir = "./nextflow_workdir"
+    array = 500
 }
 
 workDir = params.workDir
