--- a/nextflow.config
+++ b/nextflow.config
@@ -42,7 +42,7 @@ profiles {
         executor.submitRateLimit = params.submitRateLimit
         conda.enabled = true
         process.conda = "$projectDir/envs/clustering.yml"
-        process.errorStrategy = { sleep(Math.pow(2, task.attempt) * 200 as long); return 'retry' }
+        process.errorStrategy = { sleep(task.attempt * 200 as long); return 'retry' }
         process.maxRetries = 1
         if (params.mamba != false) {
             conda.useMamba = true
