Update slurm profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ params {
     output = "./output"
     mamba = false
     workDir = "./nextflow_workdir"
-    array = 500
+    array = 100
 }
 
 workDir = params.workDir
@@ -26,10 +26,8 @@ profiles {
     slurm {
         params.threads = 32
         params.maxThreads = 64
-        params.forks = 1024  // 64
+        params.forks = 16
         params.queueSize = params.forks
-        params.pollInterval = '3sec'
-        params.submitRateLimit = '32sec'  // x job submissions per second
         params.queue = "bcf"
         params.executor = 'slurm'
         process.executor = 'slurm'
@@ -38,8 +36,6 @@ profiles {
         process.memory = { 512.MB * task.attempt }
         process.maxForks = params.forks - 1
         executor.queueSize = params.queueSize
-        executor.pollInterval = params.pollInterval
-        executor.submitRateLimit = params.submitRateLimit
         conda.enabled = true
         process.conda = "$projectDir/envs/clustering.yml"
         process.errorStrategy = "retry"
