Change retry strategy

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,13 +33,13 @@ profiles {
         process.executor = 'slurm'
         process.queue = params.queue
         process.cpus = 1
-        process.memory = { 512.MB * task.attempt }
+        process.memory = { 512.MB * task.attempt ** 2 }
         process.maxForks = params.forks - 1
         executor.queueSize = params.queueSize
         conda.enabled = true
         process.conda = "$projectDir/envs/clustering.yml"
         process.errorStrategy = "retry"
-        process.maxRetries = 1
+        process.maxRetries = 3
         if (params.mamba != false) {
             conda.useMamba = true
         }
